2/24/2022
    MainFeatures
        -Added angular routing from the source page through the changelog and messages icons
        -Implemented components on the messages page to closely match the original website
        -Implemented a header and building block code for the changelog page
    SecondaryFeatures
        -Added angular routing for five places on the original source page - catch up from last week
3/3/2022
    MainFeatures
        -Implememnted firebase
        -Added user info at the top of website