@@ -1,6 +1,4 @@
 <app-user-info></app-user-info>
 <app-features>Loading...</app-features>
 <app-navbar>Loading...</app-navbar>
-<app-mainpage>Loading...</app-mainpage>
-
 <router-outlet></router-outlet>
