@@ -1,0 +1,32 @@
+.builder-button{
+    max-width: 206px;
+    min-height: 147px;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: rgb(28,154,239);
+}
+
+.character-button-block{
+    width: 100%;
+    display:block;
+}
+
+.builder-type-button-heading{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.builder-type-button-description{
+    color: rgb(255, 255, 255);
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 15px;
+    line-height: 1.4;
+    text-align: center;
+    text-transform: none;
+}
