@@ -1,0 +1,4 @@
+<a class = "character-button-block builder-button" href = "{{link}}">
+    <div class = "builder-type-button-heading">{{title}}</div>
+    <div class = "builder-type-button-description">{{description}}</div>
+</a>
