@@ -4,3 +4,24 @@
     perspective: none;
     transform: none;
 }
+
+.builder-type-choice-list{
+    display: flex;
+    align-items: flex-start;
+}
+
+.builder-type-choice-item{
+    flex: 1 1 0%;
+    margin: 0px 5px;
+    display: inline-block;
+}
+
+.builder-type-instructions{
+    text-align: left;
+    margin: 10px 0px 20px;
+
+}
+
+a:link{
+    text-decoration: none;
+}
